# devin-test-cs

./: .gitignore
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/user_application_api/: pyproject.toml  sql_app.db
backend/user_application_api/app/: database.py  main.py
backend/user_application_api/app/routers/: __init__.py  applications.py  tenants.py  users.py
frontend/user_application_ui/: .env  .env.production  .eslintrc.js  index.html  package-lock.json  package.json
frontend/user_application_ui/src/: App.vue
frontend/user_application_ui/src/assets/: main.css
frontend/user_application_ui/src/router/: index.ts
frontend/user_application_ui/src/views/: ApplicationRecords.vue  Home.vue  TenantManagement.vue  UserManagement.vue
